# ChitaiGorod-BookScraper

./: README.md  fastapi_service_books.py
chitaigorod_book_scraper/: books_sample.jsonl  pyproject.toml  scrapy.cfg
chitaigorod_book_scraper/chitaigorod_book_scraper/: items.py  middlewares.py  pipelines.py  settings.py
chitaigorod_book_scraper/chitaigorod_book_scraper/spiders/: book_spider.py
