[project]
name = "chitaigorod-book-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "esis_a_i",email = "saschasesa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "fastapi[standard] (>=0.116.0,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
